[package]
name = "mint-close-authority"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_close_authority"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0-rc.5"  # Anchor 1.0.0-rc.5 — pin to RC until stable release
anchor-spl = "1.0.0-rc.5"  # Anchor 1.0.0-rc.5 — pin to RC until stable release

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
borsh = "1.6.1"
